Added `Annotations` class with annotations utility methods.