@@ -70,6 +70,7 @@
 			--add-opens java.base/java.util=ALL-UNNAMED
 			--add-opens java.base/java.lang=ALL-UNNAMED
 			--add-opens java.base/java.lang.invoke=ALL-UNNAMED
+			--add-opens java.base/sun.reflect.annotation=ALL-UNNAMED
 		</morphixArgLine>
 	</properties>
 
